# cthulhu-dmd

./: .gitignore  LICENSE  Makefile  README.md  parse_season2_characters.py  pyproject.toml  pytest.ini  regenerate_elizabeth_audio.py  update_season2_season3_characters.py
.cursor/: custom-modes.md  simple-expert-modes.md
.cursor/rules/: core.mdc
data/: character_links.json  common_powers.json  game_mechanics.json  location_data.json  lovecraft_character_mappings.json  rulebook.md  trait_character_assignments.json  traits_data.json  tts_speakers.json
docs/: README.md  ocr-integration-issue.md  ocr-pipeline-strategy.md
make/: lint.mk  setup.mk  test.mk  website.mk
scripts/: CLEANUP_SUMMARY.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  SCRIPT_ANALYSIS.md  analyze_common_powers_from_pdf.py  analyze_common_powers_quality.py  analyze_power_statistics.py  cleanup_and_improve_common_powers.py  compare_ocr_results.py  convert_to_webp.py  convert_to_webp_demo.py  create_common_powers.py  download_characters.py  extract_and_update_common_powers.py  fix_remaining_issues.py  improve_common_powers_extraction.py  iterate_ocr_strategies.py  parse_characters.py  parse_common_powers_from_booklet.py  parse_rulebook.py  parse_special_powers.py  parse_trait_character_assignments.py  parse_traits_booklet.py  preprocess_images_for_ocr.py  read_story.py  test_ocr_pipeline.py  update_character_common_powers.py  update_common_powers_with_stats.py  update_speaker_metadata.py  update_special_powers_with_stats.py  update_stories_from_files.py
sites/: .gitignore  README.md  character.html  index.html
tasks/: 00-power-analysis-system-plan.md  01-dsl-grammar-design.md
tests/: __init__.py  (+1 more)
(+417 files in other folders)
